--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,10 @@ seaborn==0.13.2
 plotly==5.24.1
 nbformat==5.10.4
 kaleido==0.2.1
+scikit-learn==1.5.2
+feature-engine==1.8.2
+numpy==1.26.4
+mlflow==2.16
+mlxtend==0.23.3
+optuna==4.1.0
+catboost==1.2.7
